--- a/www/www/src/main/resources/application.properties
+++ b/www/www/src/main/resources/application.properties
@@ -10,10 +10,10 @@ spring.datasource.password=mysql
 mybatis.mapper-locations=classpath:/mappers/*Mapper.xml
 mybatis.configuration.map-underscore-to-camel-case=true
 
-#타임리프 캐싱 끄기, 새로고침 반영 설정
+#\uD0C0\uC784\uB9AC\uD504 \uCE90\uC2F1 \uB044\uAE30, \uC0C8\uB85C\uACE0\uCE68 \uBC18\uC601 \uC124\uC815
 spring.thymeleaf.cache=false
 
-#파일 업로드 설정
+#\uD30C\uC77C \uC5C5\uB85C\uB4DC \uC124\uC815
 spring.servlet.multipart.enabled=true
 #spring.servlet.multipart.location=D:\_myProject\_java\_fileUpload
 spring.servlet.multipart.max-file-size=20MB
