--- a/www/www/src/main/resources/application.properties
+++ b/www/www/src/main/resources/application.properties
@@ -7,14 +7,13 @@ spring.datasource.jdbc-url=jdbc:log4jdbc:mysql://localhost:3306/bootdb?character
 spring.datasource.username=springUser
 spring.datasource.password=mysql
 
-mybatis.mapper-locations=classpath:/mappers/*Mapper.xml
-mybatis.configuration.map-underscore-to-camel-case=true
+#mybatis.mapper-locations=classpath:/mappers/*Mapper.xml
+#mybatis.configuration.map-underscore-to-camel-case=true
 
-#\uD0C0\uC784\uB9AC\uD504 \uCE90\uC2F1 \uB044\uAE30, \uC0C8\uB85C\uACE0\uCE68 \uBC18\uC601 \uC124\uC815
 spring.thymeleaf.cache=false
 
-#\uD30C\uC77C \uC5C5\uB85C\uB4DC \uC124\uC815
 spring.servlet.multipart.enabled=true
-#spring.servlet.multipart.location=D:\_myProject\_java\_fileUpload
 spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=40MB
+
+#spring.servlet.multipart.location=D:\_myProject\_java\_fileUpload
