--- a/www/www/src/main/resources/application.properties
+++ b/www/www/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.jdbc-url=jdbc:log4jdbc:mysql://localhost:3306/petdb?characterE
 spring.datasource.username=springUser
 spring.datasource.password=mysql
 
-mybatis.mapper-locations=classpath:/mappers/Mapper*.xml
+mybatis.mapper-locations=classpath:/mappers/*Mapper.xml
 mybatis.configuration.map-underscore-to-camel-case=true
 
 spring.thymeleaf.cache=false
@@ -16,4 +16,4 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=40MB
 
-#spring.servlet.multipart.location=D:\_myProject\_java\_fileUpload
+spring.servlet.multipart.location=D:\_myProject\_java\_fileUpload
